package Observer.CA5;

public interface TaiKhoanObserver {
    Boolean kiemTraSoDu(int soTien);
    public void nhanThongBao(int soTienRut,boolean thanhCong);
}
